--- a/index_original_backup.html
+++ b/index_original_backup.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <img src="img/logo.jpg" alt="SNIT Logo" style="height: 50px;"> <!-- Adicionando a logo aqui -->
+                    <h1>SNIT</h1>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home" class="nav-link active">Home</a></li>
