Ajustes finais: reorganização das soluções e parceiros em 4 colunas, correção dos formulários e melhoria da experiência do usuário

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 
             <div class="solutions">
                 <div class="solution-item">
-                    <i class="fas fa-server"></i>
-                    <h3>Infraestrutura Digital Segura</h3>
-                    <p>Data centers de classe mundial que garantem máxima disponibilidade e segurança para seus dados críticos.</p>
+                    <i class="fas fa-network-wired"></i>
+                    <h3>Conectividade Estratégica</h3>
+                    <p>Acelere sua reputação no mundo digital com conexões diretas e seguras entre seus ambientes.</p>
                     <ul>
-                        <li>99.999% de uptime garantido</li>
-                        <li>Conectividade global premium</li>
-                        <li>Segurança física e digital</li>
+                        <li>Conexões privadas dedicadas</li>
+                        <li>Latência ultra-baixa</li>
+                        <li>Escalabilidade sob demanda</li>
                     </ul>
                 </div>
                 <div class="solution-item">
@@ -90,13 +90,13 @@
                     </ul>
                 </div>
                 <div class="solution-item">
-                    <i class="fas fa-network-wired"></i>
-                    <h3>Conectividade Estratégica</h3>
-                    <p>Acelere sua reputação no mundo digital com conexões diretas e seguras entre seus ambientes.</p>
+                    <i class="fas fa-server"></i>
+                    <h3>Infraestrutura Digital Segura</h3>
+                    <p>Data centers de classe mundial que garantem máxima disponibilidade e segurança para seus dados críticos.</p>
                     <ul>
-                        <li>Conexões privadas dedicadas</li>
-                        <li>Latência ultra-baixa</li>
-                        <li>Escalabilidade sob demanda</li>
+                        <li>99.999% de uptime garantido</li>
+                        <li>Conectividade global premium</li>
+                        <li>Segurança física e digital</li>
                     </ul>
                 </div>
                 <div class="solution-item">
@@ -120,20 +120,20 @@
 
             <div class="partner-logos">
                 <div class="partner-item">
-                    <h3>Equinix</h3>
-                    <p>A infraestrutura digital é a espinha dorsal da sua reputação online. Com a Equinix, oferecemos a base sólida e confiável para que sua empresa mantenha operações ininterruptas e seguras, garantindo que sua presença digital seja tão resiliente quanto sua marca precisa ser.</p>
-                </div>
-                <div class="partner-item">
                     <h3>Megaport</h3>
                     <p>Em um mundo onde a velocidade e a confiabilidade das conexões impactam diretamente a percepção do cliente, a Megaport simplifica redes complexas. Transformamos a conectividade em um diferencial competitivo que fortalece a reputação da sua empresa através de experiências digitais superiores.</p>
                 </div>
                 <div class="partner-item">
-                    <h3>FWD Computers</h3>
-                    <p>A segurança da informação deixou de ser um departamento técnico para se tornar um pilar da reputação empresarial. Com as soluções da FWD Computers, sua empresa não apenas protege dados — constrói uma fortaleza digital que transmite confiança e credibilidade ao mercado.</p>
-                </div>
-                <div class="partner-item">
                     <h3>Executiva Outsourcing</h3>
                     <p>A gestão de terceiros é um elo frequentemente negligenciado na cadeia de reputação corporativa. Através da Executiva Outsourcing, garantimos que todos os parceiros e fornecedores da sua empresa operem sob os mesmos padrões de excelência e conformidade que definem sua marca.</p>
+                </div>
+                <div class="partner-item">
+                    <h3>Equinix</h3>
+                    <p>A infraestrutura digital é a espinha dorsal da sua reputação online. Com a Equinix, oferecemos a base sólida e confiável para que sua empresa mantenha operações ininterruptas e seguras, garantindo que sua presença digital seja tão resiliente quanto sua marca precisa ser.</p>
+                </div>
+                <div class="partner-item">
+                    <h3>FWD Computers</h3>
+                    <p>A segurança da informação deixou de ser um departamento técnico para se tornar um pilar da reputação empresarial. Com as soluções da FWD Computers, sua empresa não apenas protege dados — constrói uma fortaleza digital que transmite confiança e credibilidade ao mercado.</p>
                 </div>
             </div>
         </div>
@@ -222,11 +222,11 @@
                     <span>+55 11 3136-0741</span>
                 </div>
             </div>
-            <form class="contact-form" id="contactForm">
-                <input type="text" name="name" placeholder="Seu Nome" required>
+            <form class="contact-form" id="contact-form">
+                <input type="text" name="nome" placeholder="Seu Nome" required>
                 <input type="email" name="email" placeholder="Seu Email" required>
-                <input type="text" name="company" placeholder="Sua Empresa" required>
-                <textarea name="message" placeholder="Sua Mensagem" rows="5" required></textarea>
+                <input type="text" name="empresa" placeholder="Sua Empresa" required>
+                <textarea name="mensagem" placeholder="Sua Mensagem" rows="5" required></textarea>
                 <button type="submit" class="btn">Enviar Mensagem</button>
             </form>
         </div>
