Reorganização das soluções e parceiros em 4 colunas + correção dos formulários funcionais

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#solucoes">Soluções</a></li>
-                    <li><a href="#parceiros">Parceiros</a></li>
-                    <li><a href="#sobre">Sobre Nós</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html#solucoes">Soluções</a></li>
+                    <li><a href="index.html#parceiros">Parceiros</a></li>
+                    <li><a href="index.html#sobre">Sobre Nós</a></li>
+                    <li><a href="index.html#contato">Contato</a></li>
                     <li><a href="diagnostico.html">Diagnóstico Gratuito</a></li>
                 </ul>
             </nav>
@@ -30,7 +30,7 @@
         <div class="container">
             <h1>Sua Reputação é seu Ativo mais Valioso</h1>
             <p>Conectamos soluções que protegem, fortalecem e elevam a reputação da sua empresa no mundo digital</p>
-            <a href="#solucoes" class="btn">Proteja sua Reputação</a>
+            <a href="index.html#solucoes" class="btn">Proteja sua Reputação</a>
         </div>
     </section>
 
@@ -91,7 +91,7 @@
                 </div>
                 <div class="solution-item">
                     <i class="fas fa-server"></i>
-                    <h3>Infraestrutura Digital Segura</h3>
+                    <h3>Infraestrutura Digital</h3>
                     <p>Data centers de classe mundial que garantem máxima disponibilidade e segurança para seus dados críticos.</p>
                     <ul>
                         <li>99.999% de uptime garantido</li>
